--- a/report/contents/glossary.tex
+++ b/report/contents/glossary.tex
@@ -133,6 +133,11 @@
     text={Bellman equations},
     description={Set of equations that describe the relationship between the value of a state or action and the values of subsequent states or actions in dynamic programming and reinforcement learning, used to compute optimal policies} 
 }
+\newglossaryentry{entropy}{
+    name=Entropy,
+    text={entropy},
+    description={Measure of uncertainty or randomness in a system, often used in the context of information theory and reinforcement learning to encourage exploration}
+}
 
 \newacronym{dl}{DL}{\Gls{deeplearning}}
 \newacronym{ml}{ML}{\Gls{machinelearning}}
