--- a/report/algorithms/alg_ppo.tex
+++ b/report/algorithms/alg_ppo.tex
@@ -1,18 +1,17 @@
 \begin{algorithmic}
-\State \textit{// Assume initial policy parameters } $\theta_0$ \textit{ and value function parameters } $\phi_0$
-\State \textit{// Hyper-parameters: } $\epsilon, \gamma, \lambda, \alpha_\pi, \alpha_v, K_{\text{epochs}}, N_{\text{minibatch}}, c_1, c_2$
-\State Initialize global step counter $T \gets 0$
+\State \textbf{Initialise:}
+\State \quad Policy parameters $\theta_0$ and value function parameters $\phi_0$
+\State \quad Global step counter $T \gets 0$
+\State \quad Hyper-parameters: discount $\gamma$, GAE parameter $\lambda$, clipping parameter $\epsilon$, learning rates $\alpha_\pi, \alpha_v$, epochs per update $K_{\text{epochs}}$, minibatch size $N_{\text{minibatch}}$, loss coefficients $c_1, c_2$
 \For{$k = 0, 1, 2, \ldots$}
-    \State Collect set of trajectories $\mathcal{D}_k = \{\tau_i\}$ by running policy $\pi_k = \pi(\theta_k)$ in environment
+    \State Collect set of trajectories $\mathcal{D}_k = \{\tau_i\}$ by running policy $\pi_{\theta_k}$ in environment
     \State Store transitions: $\{(s_t, a_t, r_t, s_{t+1}, \text{done}_t)\}$
-    
     \For{each trajectory $\tau$ in $\mathcal{D}_k$}
         \State Compute value estimates: $V_t = V_{\phi_k}(s_t)$
         \State Compute TD residuals: $\delta_t = r_t + \gamma V_{t+1} (1 - \text{done}_t) - V_t$
         \State Compute GAE advantages: $\hat{A}_t = \sum_{l=0}^{\infty} (\gamma \lambda)^l \delta_{t+l}$
         \State Compute returns: $\hat{R}_t = \hat{A}_t + V_t$
     \EndFor
-    
     \For{epoch $e = 1$ to $K_{\text{epochs}}$}
         \State Shuffle dataset $\mathcal{D}_k$
         \For{each minibatch $\mathcal{B}$ in $\mathcal{D}_k$}
@@ -24,7 +23,6 @@
             \State $\phi \gets \phi - \alpha_v \nabla_\phi L^{VF}(\phi)$
         \EndFor
     \EndFor
-    
     \State Update policy: $\theta_{k+1} = \theta$
     \State Update value function: $\phi_{k+1} = \phi$
     \State $T \gets T + |\mathcal{D}_k|$
